--- a/Week2.html
+++ b/Week2.html
@@ -27,7 +27,7 @@
                 class="animate__animated animate__fadeIn">
                 <h3 id="city-name"></h3>
                 <p id="date"></p>
-                <img id="weather-icon" src="" alt="Weather Icon">
+                <img id="weather-icon" src="{`https://openweathermap.org/img/wn/${weather.data.weather[0].icon}@2x.png`}" alt="Weather Icon">
                 <p id="temperature"></p>
                 <p id="description"></p>
                 <p id="wind-speed"></p>
