--- a/Week2.html
+++ b/Week2.html
@@ -22,6 +22,7 @@
    </div>
    <div class="humidity">Humidity:60%</div>
    <div class="wind">Wind Speed:6.2 km/hr</div>
+   <a class="weatherwidget-io" href="https://forecast7.com/en/32d78n96d80/dallas/" data-label_1="DALLAS" data-label_2="WEATHER" data-theme="original" >DALLAS WEATHER</a>
   </div>
  </div>
 
